test/mulberry/Language/const_errors.mulberry
# RUN: not mulberry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  const values: Tensor<Float32> = tensor.from([1.0, 2.0]);
  values[0] = 3.0;

  0
}

# CHECK: error: cannot assign to const variable
